--- a/GoldenHand/GoldenHand.csproj
+++ b/GoldenHand/GoldenHand.csproj
@@ -62,6 +62,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\FormEventArgs.cs" />
+    <Compile Include="Extensions\ExtensionsMethods.cs" />
+    <Compile Include="Forms\Forms\Base\BaseAddEditForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Forms\Base\BaseAddEditForm.Designer.cs">
+      <DependentUpon>BaseAddEditForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Forms\Base\BaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Forms\Base\BaseForm.Designer.cs">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Forms\FormAddForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Forms\FormAddForm.Designer.cs">
+      <DependentUpon>FormAddForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Forms\FormsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +106,10 @@
     <Compile Include="Migrations\202010251247514_init.Designer.cs">
       <DependentUpon>202010251247514_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010261937544_seniorShortcut field added.cs" />
+    <Compile Include="Migrations\202010261937544_seniorShortcut field added.Designer.cs">
+      <DependentUpon>202010261937544_seniorShortcut field added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ViewModels\FormViewModel.cs" />
     <Compile Include="Models\Form.cs" />
@@ -95,6 +119,15 @@
     <Compile Include="Models\Worker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\Forms\Base\BaseAddEditForm.resx">
+      <DependentUpon>BaseAddEditForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Forms\Base\BaseForm.resx">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Forms\FormAddForm.resx">
+      <DependentUpon>FormAddForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Forms\FormsForm.resx">
       <DependentUpon>FormsForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +140,9 @@
     <EmbeddedResource Include="Migrations\202010251247514_init.resx">
       <DependentUpon>202010251247514_init.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010261937544_seniorShortcut field added.resx">
+      <DependentUpon>202010261937544_seniorShortcut field added.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -118,6 +154,9 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\GoldenHand.Models.FormStatus.datasource" />
+    <None Include="Properties\DataSources\GoldenHand.Models.Senior.datasource" />
+    <None Include="Properties\DataSources\GoldenHand.Models.Worker.datasource" />
     <None Include="Properties\DataSources\GoldenHand.ModelsDisplay.FormDisplay.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
