images draw bug fixed

--- a/GoldenHand/App.config
+++ b/GoldenHand/App.config
@@ -7,7 +7,7 @@
   <connectionStrings>
     <add
       name="Default"
-      connectionString="host=80.211.30.237;port=5432; User Id=arnoldboczek; Password=boczekarnold2020; Database=gh_db;"
+      connectionString="host=80.211.30.237;port=5432; User Id=arnoldboczek; Password=boczekarnold2020; Database=gh_dbTest;"
       providerName="Npgsql" />
   </connectionStrings>
   <startup>
